--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,12 +20,18 @@
   --padding-4px: 4px;
   --padding-1rem: 1rem;
   --detail-title-text: 12px;
-  --detail-item-text: 10px
+  --detail-item-text: 12px
 }
 
 body {
   background-color: whitesmoke;
   overflow-x: hidden;
+}
+
+.column-list {
+  list-style-position: outside;
+  list-style-type: "-- ";
+  columns: 100px;
 }
 
 .h-20 {
@@ -217,6 +223,14 @@ a:hover {
 
 }
 
+.in-progress {
+  position: absolute;
+  font-size: 10px;
+  right: 15%;
+  top: 7.5%;
+  color: rgba(255,255,255,0.6);
+}
+
 .footer {
   position: fixed;
   bottom: 0;
@@ -311,7 +325,7 @@ a:hover {
     width: 100%;
   }
   #DP {
-    width: 430px;
+    width: 350px;
     position: absolute;
     right: 0;
     bottom: 0;
@@ -369,11 +383,9 @@ a:hover {
     margin-top: 2px;
   }
   .detail-item {
-    border: gray solid 1px;
     padding: 0.2rem 0.5rem 0.2rem 0.5rem;
-    border-radius: 5px;
     margin: 0 0.3rem 0.3rem 0;
-    font-size: var(--detail-item-text)
+    font-size: var(--detail-item-text);
   }
   .details-name {
     font-weight: bold;
@@ -495,7 +507,7 @@ a:hover {
 
   .card-body .bottom-flags {
     position: absolute;
-    bottom: 20px;
+    bottom: 10px;
     left: 10px;
     width: 100%;
   }
@@ -505,6 +517,9 @@ a:hover {
     border: 0;
     width: 400px;
     transition: 0.3s ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .project .card-cust:hover {
     color: white;
@@ -520,9 +535,33 @@ a:hover {
     height: 300px;
   }
 
+  .img-overlay{
+    transform: translateY(5%);
+    max-width: 85%;
+    opacity: 0.6;
+  }
+  .project .card-cust:hover .img-overlay{
+    opacity: 1;
+    transition: 0.4s ease-in-out;
+  }
+
+  .left-col {
+    overflow: scroll;
+    max-height: 100%;
+  }
+  
+  .scenario-content{
+    font-size: 12px;
+  }
+
+  .display-linebreak {
+    white-space: pre-line;
+    text-align: justify;
+  }
+
   .bottom {
     position: absolute;
-    bottom: 20%;
+    bottom: 0%;
     left: 50%;
     transform: translateX(-50%);
     z-index: 0;
@@ -581,6 +620,21 @@ a:hover {
 
   .note {
     transform: translateY(-35%);
+  }
+
+  .modal-right{
+    max-height: 80vh;
+    overflow: auto;
+  }
+
+  /* .modal-right::webkit-scrollbar{
+    display: flex;
+  } */
+
+  .p-image{
+    width: 50%;
+    float: left;
+    padding-right: 8px;
   }
 }
 @media only screen and (min-width: 1440px) {
