--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,6 +21,8 @@
   --padding-1rem: 1rem;
   --detail-title-text: 12px;
   --detail-item-text: 12px;
+  --iten-year-fs: 18px;
+  --iten-title-fs: 20px;
 }
 
 body {
@@ -142,7 +144,7 @@ a:hover {
   height: 100%;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 3;
   margin: 0;
   padding: 0;
 }
@@ -245,7 +247,7 @@ a:hover {
   display: flex;
   align-items: center;
   padding: 0px 30px 10px 30px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .left span {
@@ -323,12 +325,12 @@ a:hover {
     background-color: white;
     padding: 0 var(--padding-1rem) 0 var(--padding-1rem);
     margin: 0 auto;
-    z-index: 1;
+    z-index: 2;
     height: 50px;
     width: 100%;
   }
   #DP {
-    width: 80vh;
+    width: 70vh;
     position: absolute;
     right: 0;
     bottom: 0;
@@ -371,7 +373,7 @@ a:hover {
     color: rgba(0, 0, 0, 0.3);
   }
   .emboss {
-    font-size: 14vw;
+    font-size: 145px;
     color: rgba(255, 255, 255, 1);
     text-transform: uppercase;
     text-shadow: -4px 1px 5px rgba(0, 0, 0, 0.3),
@@ -497,14 +499,27 @@ a:hover {
 
   .item-year {
     color: rgba(255, 255, 255, 0.7);
-    font-size: 50%;
+    font-size: var(--iten-year-fs);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
       'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 
   .item-title {
     color: rgba(white, 0.7);
-    font-size: 70%;
+    font-size: var(--iten-title-fs);
+    font-family: 'Secular One', sans-serif;
+  }
+
+  .item-year-cert {
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 12px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+      'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  }
+
+  .item-title-cert {
+    color: rgba(white, 0.7);
+    font-size: 14px;
     font-family: 'Secular One', sans-serif;
   }
 
@@ -542,7 +557,7 @@ a:hover {
   .img-overlay {
     transform: translateY(5%);
     max-width: 85%;
-    opacity: 0.6;
+    opacity: 0.3;
   }
   .project .card-cust:hover .img-overlay {
     opacity: 1;
@@ -603,7 +618,7 @@ a:hover {
     position: absolute;
     bottom: 0%;
     left: 50%;
-    z-index: 3;
+    z-index: 1;
     width: 0px;
     height: 2px;
     transform: translate(-50%);
@@ -629,7 +644,7 @@ a:hover {
   .modal-right {
     max-height: 80vh;
     overflow: auto;
-    width: 100%;
+    /* background-color: #000; */
   }
 
   /* .modal-right::webkit-scrollbar{
@@ -644,6 +659,42 @@ a:hover {
 }
 @media only screen and (min-width: 1440px) {
   /* styles for browsers larger than 1440px; */
+  .section-1 {
+    background-color: white;
+    width: 100%;
+    height: 100vh;
+    justify-self: center;
+    display: flex;
+    margin: 0 auto;
+  }
+
+  .emboss {
+    font-size: 16vw;
+    color: rgba(255, 255, 255, 1);
+    position: relative;
+    left: 0;
+    top: 0vh;
+  }
+
+  #DP {
+    max-width: 58vh;
+    position: absolute;
+    bottom: 15%;
+  }
+
+  .project .card {
+    border-radius: 0;
+    width: 500px;
+    height: 360px;
+  }
+
+  .certs .card-cust {
+    background-color: black;
+    border: 0;
+    width: 300px;
+    height: 350px;
+    transition: 0.2s ease-in-out;
+  }
 }
 @media only screen and (min-width: 2000px) {
   /* for sumo sized (mac) screens */
@@ -659,7 +710,7 @@ a:hover {
     background-color: white;
     padding: 0 var(--padding-1rem) 0 var(--padding-1rem);
     margin: 0;
-    z-index: 1;
+    z-index: 2;
     height: 50px;
   }
   #DP {
@@ -748,14 +799,14 @@ a:hover {
 
   .item-year {
     color: rgba(255, 255, 255, 0.7);
-    font-size: 50%;
+    font-size: var(--iten-year-fs);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
       'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 
   .item-title {
     color: rgba(white, 0.7);
-    font-size: 70%;
+    font-size: var(--iten-title-fs);
     font-family: 'Secular One', sans-serif;
   }
 
@@ -818,7 +869,7 @@ a:hover {
     position: absolute;
     bottom: 0%;
     left: 50%;
-    z-index: 3;
+    z-index: 1;
     width: 0px;
     height: 2px;
     transform: translate(-50%);
@@ -850,7 +901,7 @@ a:hover {
     background-color: white;
     padding: 0 var(--padding-1rem) 0 var(--padding-1rem);
     margin: 0;
-    z-index: 1;
+    z-index: 2;
     min-height: var(--navbar-height);
     width: 100%;
   }
@@ -868,6 +919,20 @@ a:hover {
     overflow-x: hidden;
   }
 
+  .img-overlay {
+    max-width: 85%;
+    /* opacity: 1; */
+    border-radius: 1rem;
+    height: 100%;
+  }
+
+  .card:last-child .img-overlay {
+    max-width: 100%;
+    opacity: 0.9;
+    border-radius: 1rem;
+    height: 100%;
+  }
+
   .section-1 {
     width: 100%;
   }
@@ -876,9 +941,114 @@ a:hover {
     width: 90vw;
   }
 
+  .p-image {
+    width: 50%;
+    float: left;
+    padding-right: 8px;
+  }
+
+  .detail-item-container {
+    float: left;
+    margin-top: 2px;
+  }
+  .detail-item {
+    padding: 0.2rem 0.5rem 0.2rem 0.5rem;
+    margin: 0 0.3rem 0.3rem 0;
+    font-size: var(--detail-item-text);
+  }
+  .details-name {
+    font-weight: bold;
+  }
+  .details-name-title {
+    letter-spacing: 2px;
+    font-size: var(--detail-title-text);
+  }
+
+  .details-name .link-a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  .details-name .link-a {
+    font-size: small;
+    background: linear-gradient(
+        to right,
+        rgba(100, 200, 200, 1),
+        rgba(100, 200, 200, 1)
+      ),
+      linear-gradient(
+        to right,
+        rgba(255, 0, 0, 1),
+        rgba(255, 0, 180, 1),
+        rgba(0, 100, 200, 1)
+      );
+    background-size: 100% 3px, 0 3px;
+    background-position: 100% 100%, 0 100%;
+    background-repeat: no-repeat;
+    transition: background-size 400ms;
+  }
+
+  .details-name .link-a:hover {
+    background-size: 0 3px, 100% 3px;
+  }
+  .details-links {
+    font-size: 1rem;
+    padding-top: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .details-links a {
+    text-decoration: none;
+    color: #18272f;
+    font-weight: 700;
+    position: relative;
+    padding: 0 0 0.5rem 0;
+    margin: 1rem;
+  }
+
+  .details-links a::before {
+    content: '';
+    background-color: hsla(196, 61%, 58%, 0.75);
+    position: absolute;
+    left: 0;
+    bottom: 3px;
+    width: 100%;
+    height: 8px;
+    z-index: 0;
+    color: aliceblue;
+    transition: all 0.1s ease-in-out;
+  }
+
+  .details-links a:hover::before {
+    bottom: 0;
+    height: 100%;
+  }
+
+  .bottom-row {
+    background-color: #000;
+    max-height: 40vh;
+    overflow-y: scroll;
+  }
+
+  .bottom-row-white {
+    max-height: 40vh;
+    overflow-y: scroll;
+  }
+  .scenario-content {
+    font-size: 12px;
+  }
+
+  .display-linebreak {
+    white-space: pre-line;
+    text-align: justify;
+  }
+
   .Nav-text {
-    font-size: 5vw;
+    font-size: 16px;
     color: black;
+    border-bottom: whitesmoke;
   }
 
   .h2 {
@@ -905,6 +1075,11 @@ a:hover {
     font-weight: bold;
     text-align: center;
   }
+  .card-title-c {
+    padding: 1rem;
+    background-color: white;
+  }
+
   .cards {
     display: flex;
     width: 100%;
@@ -937,24 +1112,22 @@ a:hover {
     font-size: 5vw;
   }
   .cert-card-m {
-    display: flex;
-    width: var(--card-width-md);
-    height: var(--card-height-md);
-    flex-direction: column;
-    position: relative;
-    min-width: 300px;
-
-    background: white;
+    border-radius: 1rem;
     box-shadow: -1rem 1rem 1rem rgba(38, 57, 77, 0.5);
+    height: var(--card-height-md);
     transition: 0.2s;
+    min-width: var(--card-width-md);
     margin-bottom: 60px;
+    display: flex;
+    background-color: #000;
+
   }
 
   .cert-card-m:hover {
     transform: translateY(-1rem);
   }
   .cert-card-m:hover ~ .cert-card-m {
-    transform: translateX(50px);
+    transform: translateY(-1rem);
   }
 
   .cert-card-m:not(:first-child) {
@@ -964,17 +1137,46 @@ a:hover {
     margin-left: var(--card-fc-m-md);
   }
 
+
+
   .item-year {
     color: black;
+    background-color: white;
     font-size: var(--card-subt-m-lg);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
       'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
+
   .item-title {
+    background-color: white;
     color: rgba(black, 0.7);
     font-size: var(--card-fs-m-lg);
     font-family: 'Secular One', sans-serif;
-    margin-top: 20px;
+    padding-top: 10px;
+  }
+
+  
+  .item-year-cert {
+    color: white;
+    font-size: 12px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+      'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  }
+
+  .item-title-cert {
+    color: white;
+    font-size: 14px;
+    font-family: 'Secular One', sans-serif;
+    padding-top: 20px;
+  }
+}
+
+/* small screen phones e.g iphone SE */
+@media only screen and (min-device-width: 370px) and (max-device-height: 700px) and (max-device-width: 1024px) and (orientation: portrait) {
+  /* For portrait layouts only */
+
+  #DP {
+    width: 80vw;
   }
 }
 
